[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Kevin Clark <kevin.clark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
clap = "2"

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false
